--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                     Sortear amigo
                 </button>
             </div>
+            <div>
+                <button class="button-reset" onclick="reiniciar()" aria-level="Reiniciar Sorteo"><img src="assets/reset.jpg" alt="icono para reiniciar">Reiniciar
+                </button>
+            </div>
         </section>
     </main>
 
