actualizar boton reset

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </button>
             </div>
             <div>
-                <button class="button-reset" onclick="reiniciar()" aria-level="Reiniciar Sorteo"><img src="assets/reset.jpg" alt="icono para reiniciar">Reiniciar
+                <button class="button-reset" onclick="reiniciar()" aria-level="Reiniciar Sorteo"><img src="assets/reset.png" alt="icono para reiniciar">Reiniciar
                 </button>
             </div>
         </section>
