--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             <ul id="resultado" class="result-list" aria-live="polite"></ul>
 
             <div class="button-container">
-                <button class="button-draw" onclick="sortearAmigo()" aria-label="Sortear amigo secreto">
+                <button class="button-draw button-primary" onclick="sortearAmigo()" aria-label="Sortear amigo secreto">
                     <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
                     Sortear amigo
                 </button>
             </div>
             <div>
-                <button class="button-reset" onclick="reiniciar()" aria-label="Reiniciar Sorteo"><img src="assets/reset.png" alt="icono para reiniciar">Reiniciar
+                <button class="button-reset button-primary" onclick="reiniciar()" aria-label="Reiniciar Sorteo"><img src="assets/reset.png" alt="icono para reiniciar">Reiniciar
                 </button>
             </div>
         </section>
